[package]
name = "yggdrasil-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true
yggdrasil-crypto.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
# Wave 9 PR 28 follow-on: property-based CBOR roundtrip tests
# covering the workspace's foundational newtype + enum encoders.
proptest = { version = "1.7", default-features = false, features = ["std"] }

# ──────────────────────────────────────────────────────────────────────
# Wave 3 PR 5 — feature-flag declarations.
#
# `plutus` (default) reserves a hook for Wave 5 PR 10 sub-crate
# extraction. Disabling it (built by sister tools that only walk
# block headers, e.g. db-truncater) will eventually drop the
# Alonzo+ phase-2 witness-resolution path. Today the flag is
# decorative: no `#[cfg(feature = "plutus")]` gates exist yet, so
# the default build is byte-identical, and the `lint-no-default`
# CI job (cargo lint-no-default) builds the same surface.
#
# Wave 5+ wires the actual gates around the script-context
# encode/decode and the Alonzo+ tx-witness paths.
# ──────────────────────────────────────────────────────────────────────
[features]
default = ["plutus"]
plutus = []

[lints]
workspace = true
