[package]
name = "yggdrasil-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true
yggdrasil-crypto.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
# Wave 9 PR 28 follow-on: property-based CBOR roundtrip tests
# covering the workspace's foundational newtype + enum encoders.
proptest = { version = "1.7", default-features = false, features = ["std"] }

# ──────────────────────────────────────────────────────────────────────
# Feature flags.
#
# `plutus` was removed in R592. The Phase 5.4 audit (2026-05)
# concluded the flag was mis-scoped: this crate does NOT depend on
# `crates/plutus` — the heavy CEK-machine / cost-model code lives
# behind the inverted `PlutusEvaluator` trait, wired by
# `crates/node/plutus-eval` and the node binary, not here.
# `crates/ledger`'s own phase-2 code (`plutus_validation.rs`) is
# ~1.4 KLoC of pure trait-orchestration with no heavy dependency
# tree, and `validate_plutus_scripts` already takes
# `Option<&dyn PlutusEvaluator>` — the evaluator is already optional
# at the call boundary. Gating `plutus_validation` off would not
# slim the dependency graph or the binary; it would only remove
# validation logic — a correctness hazard, not a build-slimming win.
# Genuine Plutus build-slimming belongs at the
# `crates/node/plutus-eval` bridge / node-binary level (gate
# `crates/plutus` itself out of the graph), not on this crate's
# feature flag.
#
# 0 `#[cfg(feature = "plutus")]` gates in `crates/ledger/src/` and
# 0 downstream consumers opted in or out, so removal is a no-op
# behaviour change.
# ──────────────────────────────────────────────────────────────────────

[lints]
workspace = true
