[package]
name = "yggdrasil-network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
hex.workspace = true
tempfile = "3"

# ──────────────────────────────────────────────────────────────────────
# Wave 3 PR 5 — feature-flag declarations.
#
# Reserved hooks for Wave 5 PR 11 and Wave 8 PR 22:
#   * `ntn`           — Node-to-Node mini-protocols (default).
#                       Sister tools that only need the local socket
#                       surface (cardano-submit-api, kes-agent-control)
#                       opt out by depending on this crate with
#                       `default-features = false, features = ["ntc"]`.
#   * `ntc`           — Node-to-Client mini-protocols (default).
#                       Required by every sister tool that talks to
#                       a running yggdrasil-node.
#
# Both are default-on; the default build is byte-identical with or
# without them. As of the Phase 5.4 audit (2026-05) both remain
# **decorative** — no `#[cfg(feature = "...")]` gates reference them;
# wiring them means gating whole mini-protocol module trees, large
# but mechanically tractable, deferred.
# ──────────────────────────────────────────────────────────────────────
[features]
default = ["ntn", "ntc"]
ntn = []
ntc = []

[lints]
workspace = true
