[package]
name = "yggdrasil-network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
hex.workspace = true
tempfile = "3"

# ──────────────────────────────────────────────────────────────────────
# Feature-flag declarations.
#
# `ntn` was removed in R591 — every yggdrasil consumer (relays,
# producers, sister tools) needs node-to-node mini-protocols, so
# gating them behind a flag had no operational benefit. The flag
# was decorative (0 `#[cfg(feature = "ntn")]` sites and 0 downstream
# opt-ins/opt-outs).
#
#   * `ntc`           — Node-to-Client mini-protocols (default).
#                       Required by every sister tool that talks to
#                       a running yggdrasil-node. Currently
#                       decorative (no `#[cfg(feature = "ntc")]`
#                       gates); wiring it means gating the whole
#                       NtC mini-protocol module tree — mechanically
#                       tractable, deferred to a follow-on round.
# ──────────────────────────────────────────────────────────────────────
[features]
default = ["ntc"]
ntc = []

[lints]
workspace = true
