[package]
name = "yggdrasil-network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
hex.workspace = true
tempfile = "3"

# No feature flags. The decorative `ntn` (removed R591) and `ntc`
# (removed R770) flags were both inert — 0 `#[cfg]` sites — and every
# yggdrasil consumer (relays, producers, sister tools) needs both the
# node-to-node and node-to-client mini-protocol surfaces, so gating
# them behind a flag carried no operational benefit. Wiring `ntc`
# would have scattered `#[cfg(feature = "ntc")]` across `yggdrasil-
# network`, `yggdrasil-node`, and `cardano-cli`'s LocalStateQuery
# surface for a niche relay-only build; removal matches the R591/R592
# inert-flag precedent.

[lints]
workspace = true
