[package]
name = "yggdrasil-plutus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
sha2.workspace = true
sha3.workspace = true
ripemd.workspace = true
thiserror.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
# `tests/upstream_cost_model.rs` reads the vendored alonzo-genesis JSON
# directly (instead of pulling in the whole `node::genesis` parsing
# stack just to load `costModels.PlutusV1` for an end-to-end assertion).
serde_json.workspace = true

[lints]
workspace = true
