[package]
name = "yggdrasil-plutus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
sha2.workspace = true
sha3.workspace = true
ripemd.workspace = true
thiserror.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
# `tests/upstream_cost_model.rs` reads the vendored alonzo-genesis JSON
# directly (instead of pulling in the whole `node::genesis` parsing
# stack just to load `costModels.PlutusV1` for an end-to-end assertion).
serde_json.workspace = true

# ──────────────────────────────────────────────────────────────────────
# Wave 3 PR 5 — feature-flag declarations.
#
# Splitting `secp256k1` and `bls12-381` lets the Wave 9 PR 28
# cost-model fuzz harness compile out the BLS path (which dominates
# build time and is irrelevant to integer/bytestring builtin fuzzing)
# without touching the rest of the CEK machine.
#
# Both default-on; the default build is byte-identical to the
# pre-flag build.
#
# `secp256k1` (Phase 5.4 — wired): gates the `evaluate_builtin`
# dispatch arms for `VerifyEcdsaSecp256k1Signature` /
# `VerifySchnorrSecp256k1Signature` + the `verify_*_secp256k1`
# helpers + the `yggdrasil_crypto::secp256k1` import. The
# `DefaultBuiltin` enum variants stay unconditional (wire-level
# flat tags 52/53); with the feature off, evaluation surfaces a
# `MachineError::BuiltinError` instead of dispatching the crypto.
#
# `bls12-381`: not yet `#[cfg]`-gated — the BLS dispatch is an
# 18-arm block plus `get_g1` / `get_g2` helpers; gating it cleanly
# is a follow-on round.
# ──────────────────────────────────────────────────────────────────────
[features]
default = ["secp256k1", "bls12-381"]
secp256k1 = []
bls12-381 = []

[lints]
workspace = true
