[package]
name = "yggdrasil-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
