[package]
name = "yggdrasil-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
thiserror.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
tempfile = "3"

# ──────────────────────────────────────────────────────────────────────
# Wave 3 PR 5 — feature-flag declarations.
#
# Reserved hooks for fuzz / property-test builds and for any
# embedded / WASM target that can't access disk-backed storage:
#   * `lmdb`     — file-backed immutable / volatile / ledger DBs
#                  (default). Required by every operator deployment.
#   * `mem-only` — in-memory-only storage stack.
#
# Phase 5.4 audit (2026-05): both flags remain **decorative** — no
# `#[cfg(feature = "...")]` gates reference them. The flag pair does
# not model a backend *choice*: the in-memory implementations
# (`InMemoryLedgerStore`, `InMemoryVolatile`) and the file-backed
# ones (`file_immutable` / `file_volatile` / `file_ledger`) are both
# always compiled and both always public — `mem-only` is additive,
# not exclusive. The in-memory stack is used by this crate's own
# tests and the fuzz harnesses unconditionally. Wiring these flags
# as a genuine compile-time backend selection needs a refactor that
# first makes the two backends mutually exclusive (today they are
# not). Not a mechanical `#[cfg]` insertion.
# ──────────────────────────────────────────────────────────────────────
[features]
default = ["lmdb"]
lmdb = []
mem-only = []

[lints]
workspace = true
