[package]
name = "yggdrasil-telemetry"
description = "Workspace-wide observability scaffolding (log format, span field names, tracing-subscriber wiring). Wave 2 scaffold; Wave 6 fills in the tracing/metrics dependencies."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Wave 6 PR 14: tracing facade + subscriber landed. OpenTelemetry
# OTLP forwarding stays deferred to a follow-on PR — adding
# tracing-opentelemetry + opentelemetry_sdk + opentelemetry-otlp
# brings async-runtime + protobuf deps that don't pay off until the
# cardano-tracer Mux 2/3 protocol lands; today's `init_subscriber`
# just installs the local Haskell-JSON + EnvFilter layers.
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
