[package]
name = "yggdrasil-test-fixtures"
description = "Shared test scaffolding (tmp_chaindb, make_test_peer, byte-equivalence helpers) consumed by other workspace crates as a dev-dependency only."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Intentionally std-only. This crate stays minimal so adding it
# as a dev-dependency in every Wave 5 sub-crate (and Wave 6/8
# observability tests) doesn't pull in fresh transitive deps.

[lints]
workspace = true
