[package]
name = "yggdrasil-node-ntc-server"
description = "Node-to-Client mini-protocol server (LocalStateQuery / LocalTxSubmission / LocalTxMonitor) plus the Unix-socket accept loop. Extracted from yggdrasil-node in Wave 5 PR 11."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-network.workspace = true
yggdrasil-node-config.workspace = true
yggdrasil-node-genesis.workspace = true
# ntc-server pulls only non-forge runtime helpers (`mempool_helpers`,
# `ChainTipNotify`, `NodeConfig`); workspace-default of runtime is
# `forge` OFF, so ntc-server doesn't pull the block-producer crate
# in transitively. The binary opts INTO forge separately via its
# own `forge` feature when built with default features.
yggdrasil-node-runtime.workspace = true
yggdrasil-node-sync.workspace = true
yggdrasil-node-tracer.workspace = true
yggdrasil-storage.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
