[package]
name = "yggdrasil-node-ntn-server"
description = "Node-to-Node mini-protocol server (ChainSync / BlockFetch / KeepAlive / TxSubmission2 / PeerSharing). Extracted from yggdrasil-node in Wave 5 PR 11."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-network.workspace = true
yggdrasil-node-runtime.workspace = true
yggdrasil-node-sync.workspace = true
yggdrasil-node-tracer.workspace = true
yggdrasil-storage.workspace = true

[lints]
workspace = true
