[package]
name = "yggdrasil-node-plutus-eval"
description = "Plutus script evaluator wrapper used by the node runtime — extracted from the yggdrasil-node binary in Wave 5 PR 10 so the feature-flag `plutus` toggle can actually slim the binary."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-node-genesis.workspace = true
yggdrasil-plutus.workspace = true

[lints]
workspace = true
