[package]
name = "yggdrasil-node-runtime"
description = "Node runtime orchestration — the governor loop, mempool tx-submission, ledger judgement, peer-management, sync session driver, block-producer loop. Extracted from yggdrasil-node in Wave 5 PR 12. Glues every other node-sub-crate together; the binary's main is now ~3 KLoC thin."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-network.workspace = true
yggdrasil-node-block-producer.workspace = true
yggdrasil-node-config.workspace = true
yggdrasil-node-genesis.workspace = true
yggdrasil-node-plutus-eval.workspace = true
yggdrasil-node-sync.workspace = true
yggdrasil-node-tracer.workspace = true
yggdrasil-plutus.workspace = true
yggdrasil-storage.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
