[package]
name = "yggdrasil-node-runtime"
description = "Node runtime orchestration — the governor loop, mempool tx-submission, ledger judgement, peer-management, sync session driver, block-producer loop. Extracted from yggdrasil-node in Wave 5 PR 12. Glues every other node-sub-crate together; the binary's main is now ~3 KLoC thin."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-network.workspace = true
# Wave 5 PR 5+ feature flag: `forge` gates the block-producer
# orchestration (forge.rs + block_producer_loop.rs). A relay-only
# build (`--no-default-features` on the binary) drops this dep
# entirely so SPOs running pure relays don't carry the unused KES
# / OpCert / body-assembly code in their binary.
yggdrasil-node-block-producer = { workspace = true, optional = true }
yggdrasil-node-config.workspace = true
yggdrasil-node-genesis.workspace = true
yggdrasil-node-plutus-eval.workspace = true
yggdrasil-node-sync.workspace = true
yggdrasil-node-tracer.workspace = true
yggdrasil-plutus.workspace = true
yggdrasil-storage.workspace = true

[features]
default = ["forge"]
# Compiles the slot-driven block-producer dispatch (forge.rs +
# block_producer_loop.rs). When OFF the modules are absent and the
# block-producer crate is excluded from the dependency graph; the
# runtime then ships only the sync / governor / peer-management
# orchestration that every node (relay or producer) needs.
forge = ["dep:yggdrasil-node-block-producer"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
