[package]
name = "yggdrasil-node-tracer"
description = "Node tracer + metrics registry + cardano-tracer Unix-socket forwarder + raw-TCP metrics-server. Extracted from the yggdrasil-node binary in Wave 5 PR 7 so sister tools and observability scaffolding can consume the NodeMetrics / trace_fields surface without linking the runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ciborium.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-node-config.workspace = true

[lints]
workspace = true
