[package]
name = "yggdrasil-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bech32.workspace = true
ciborium.workspace = true
clap.workspace = true
eyre.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-cardano-cli.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-node-block-producer.workspace = true
yggdrasil-node-config.workspace = true
yggdrasil-node-genesis.workspace = true
yggdrasil-node-ntc-server.workspace = true
yggdrasil-node-ntn-server.workspace = true
yggdrasil-node-plutus-eval.workspace = true
yggdrasil-node-runtime.workspace = true
yggdrasil-node-sync.workspace = true
yggdrasil-node-tracer.workspace = true
yggdrasil-plutus.workspace = true
yggdrasil-network.workspace = true
yggdrasil-storage.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
