[package]
name = "yggdrasil-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bech32.workspace = true
ciborium.workspace = true
clap.workspace = true
eyre.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-cardano-cli.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
# Wave 5 PR 5+ feature flag: `forge` gates the block-producer
# dependency on the binary. A relay-only build via
# `cargo build --no-default-features --features=relay-only`
# omits the crate entirely (along with KES, OpCert, body assembly,
# self-validation, the forge dispatch in `run_node.rs`, and the
# `validate-config` operator-credential loader).
yggdrasil-node-block-producer = { workspace = true, optional = true }
yggdrasil-node-config.workspace = true
yggdrasil-node-genesis.workspace = true
yggdrasil-node-ntc-server.workspace = true
yggdrasil-node-ntn-server.workspace = true
yggdrasil-node-plutus-eval.workspace = true
yggdrasil-node-runtime.workspace = true
yggdrasil-node-sync.workspace = true
yggdrasil-node-tracer.workspace = true
yggdrasil-plutus.workspace = true
yggdrasil-network.workspace = true
yggdrasil-storage.workspace = true

[features]
default = ["forge"]
# Compile in the slot-driven block-producer dispatch: pulls in the
# `yggdrasil-node-block-producer` crate, activates the runtime
# crate's `forge` feature, and wires the producer-task spawn in
# `run_node.rs` + the operator-credential loader in `validate-
# config`.
forge = [
    "dep:yggdrasil-node-block-producer",
    "yggdrasil-node-runtime/forge",
]
# Operator-facing alias for "build without forge". Sugar for
# `--no-default-features` — explicit so the operator's invocation
# stays self-documenting.
relay-only = []

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
